--- a/index.html
+++ b/index.html
@@ -1,11 +1,2 @@
-<html>
-<head>
-<title>ttt</title>
-<meta charset="windows-1251">
-<meta http-equiv="content-language" content="ru">
-<meta name="keywords" content="ключевые слова">
-<meta name="description" content="описание страницы">
-</head>
-<body> Hello
-</body>
-</html>
+<iframe src="https://i-goods24.com/" width="100%" height="900" 
+style="border:none;height:800px;width:100% !important" allowfullscreen></iframe>
