--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<iframe src="https://i-goods24.com/" width="100%" height="900" 
+
+<!DOCTYPE HTML>
+<html>
+ <head>
+  <meta property="og:type" content="web site"/>
+<meta property="og:title" content="Cuban Pulsera"/>
+<meta property="og:description" content="Cuban Pulsera top 2019"/>
+<meta property="og:image" content="https://goods-sales.gitgub.ioimage250X250.png"/>
+<meta property="og:url" content="http://www.goods-sales.gitgub.io"/>
+<meta property="og:site_name" content="Braclet Top hit"/>
+<meta property="og:see_also" content="http://goods-sales.gitgub.io"/>
+<meta property="fb:admins" content="Facebook_ID"/>
+ </head>
+ <body>
+ <iframe src="https://i-goods24.com/" width="100%" height="900" 
 style="border:none;height:800px;width:100% !important" allowfullscreen></iframe>
+ </body>
+</html>
